--- a/index.html
+++ b/index.html
@@ -8,14 +8,9 @@
 </head>
 <body>
   <main id="container">
-    <div id="container1"></div>
-    <div id="container2"></div>
-    <div id="container3"></div>
 
   </main>
   
-  <script type="module" src="./scripts/CargoShip.js"></script>
-  <script type="module" src="./scripts/Docks.js"></script>
-  <script type="module" src="./scripts/Haulers.js"></script>
+  <script type="module" src="./scripts/main.js"></script>
 </body>
 </html>
